# Sonic-Mania-25MB

./: README.md  compile-the-thing.bat  compress-data-rsdk.bat
RSDKv5-Decompilation/: CMakeLists.txt
RSDKv5-Decompilation/RSDKv5/: RSDKv5.rc  resource.h
RSDKv5-Decompilation/RSDKv5/RSDK/Audio/: Audio.cpp  Audio.hpp
RSDKv5-Decompilation/RSDKv5/RSDK/Core/: Reader.cpp  RetroEngine.cpp  RetroEngine.hpp
RSDKv5-Decompilation/RSDKv5/RSDK/Graphics/: Scene3D.cpp  Scene3D.hpp  Video.cpp  Video.hpp
RSDKv5-Decompilation/RSDKv5/RSDK/Graphics/DX9/: DX9RenderDevice.cpp
RSDKv5-Decompilation/RSDKv5/RSDK/User/Core/: UserCore.cpp
RSDKv5-Decompilation/RSDKv5/RSDK/User/Dummy/: DummyStorage.cpp
RSDKv5-Decompilation/RSDKv5U/: RSDKv5U.rc
RSDKv5-Decompilation/SonicMania/: build_object.bat
RSDKv5-Decompilation/VideoVP9/: decodertest.c  ivfdec.cpp  ivfdec.h  plane_converters.c  plane_converters.h  tools_common.c  video_reader.cpp  video_reader.h  vpx_config.c  vpx_config.h
RSDKv5-Decompilation/dependencies/all/tinyxml2/: tinyxml2.cpp
RSDKv5-Decompilation/dependencies/windows/libogg/: Makefile  config.h  config.status  libtool  ogg-uninstalled.pc  ogg.pc
RSDKv5-Decompilation/dependencies/windows/libogg/doc/: Makefile
RSDKv5-Decompilation/dependencies/windows/libogg/include/: Makefile
RSDKv5-Decompilation/dependencies/windows/libogg/include/ogg/: Makefile
RSDKv5-Decompilation/dependencies/windows/libogg/src/: Makefile  bitwise.lo  framing.lo  libogg.la
RSDKv5-Decompilation/dependencies/windows/libogg/src/.deps/: bitwise.Plo  framing.Plo  test_bitwise-bitwise.Po  test_framing-framing.Po
RSDKv5-Decompilation/dependencies/windows/libogg/src/.libs/: libogg.lai  lt-test_bitwise.c  lt-test_framing.c  test_bitwise_ltshwrapper  test_framing_ltshwrapper
RSDKv5-Decompilation/dependencies/windows/libs_x86/include/SDL2/: SDL_config.h  SDL_revision.h
RSDKv5-Decompilation/dependencies/windows/libs_x86/lib/: libSDL2.la  libSDL2_test.la  libSDL2main.la  libportaudio.la
RSDKv5-Decompilation/dependencies/windows/libs_x86/lib/pkgconfig/: ogg.pc  opus.pc  portaudio-2.0.pc  sdl2.pc  theora.pc  theoradec.pc  vorbis.pc  vorbisenc.pc  vorbisfile.pc  vpx.pc
RSDKv5-Decompilation/dependencies/windows/libs_x86/share/fonts/: .uuid
RSDKv5-Decompilation/dependencies/windows/libtheora/: Makefile  Makefile.in  aclocal.m4  config.h  config.h.in  config.status  configure  libtheora.spec  libtool  theora-uninstalled.pc  theoradec-uninstalled.pc  theoraenc-uninstalled.pc  theoraenc.pc
RSDKv5-Decompilation/dependencies/windows/libtheora/doc/: Doxyfile  Makefile  Makefile.in
RSDKv5-Decompilation/dependencies/windows/libtheora/doc/spec/: Makefile  Makefile.in
RSDKv5-Decompilation/dependencies/windows/libtheora/examples/: Makefile  Makefile.in  dump_video  encoder_example.c  player_example.c  png2theora.c
RSDKv5-Decompilation/dependencies/windows/libtheora/examples/.deps/: dump_psnr.Po  dump_video.Po
RSDKv5-Decompilation/dependencies/windows/libtheora/include/: Makefile  Makefile.in
RSDKv5-Decompilation/dependencies/windows/libtheora/include/theora/: Makefile
RSDKv5-Decompilation/dependencies/windows/libtheora/lib/: Makefile  apiwrapper.lo  bitpack.lo  decapiwrapper.lo  decinfo.lo  decint.h  decode.c  decode.lo  dequant.lo  encint.h  fragment.lo  huffdec.c  huffdec.lo  idct.lo  info.lo  internal.h  internal.lo  quant.lo  state.lo
RSDKv5-Decompilation/dependencies/windows/libtheora/lib/.deps/: analyze.Plo  apiwrapper.Plo  bitpack.Plo  decapiwrapper.Plo  decinfo.Plo  decode.Plo  dequant.Plo  encapiwrapper.Plo  encfrag.Plo  encinfo.Plo  encode.Plo  enquant.Plo  fdct.Plo  fragment.Plo  huffdec.Plo  huffenc.Plo  idct.Plo  info.Plo  internal.Plo  mathops.Plo  mcenc.Plo  mmxencfrag.Plo  mmxfdct.Plo  mmxfrag.Plo  mmxidct.Plo  mmxstate.Plo  quant.Plo  rate.Plo  (+9 more)
RSDKv5-Decompilation/dependencies/windows/libtheora/m4/: Makefile  Makefile.in
RSDKv5-Decompilation/dependencies/windows/libtheora/tests/: Makefile  Makefile.in
(+35 files in other folders)
